crates/swc/tests/tsc-references/ts-expect-error.2.minified.js
//// [ts-expect-error.ts]
// @ts-expect-error additional commenting
 // error
